[package]
name = "pack-clr"
version = "0.1.0"
edition = "2024"

[dependencies]
clroxide = "1.1.1"
cryptify = "3.1.1"
dinvk = "0.2.6"
hwbp = "0.1.2"
libloading = "0.8.8"
rust-crypto = "0.2.36"
zeroize = "1.8.1"


[build-dependencies]
rust-crypto = "0.2.36"
rand = "0.9.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
